--- a/templates/album_analysis.html
+++ b/templates/album_analysis.html
@@ -10,6 +10,7 @@
     <script src="/static/js/album-search.js"></script>
     <script src="/static/js/album-analysis.js"></script>
     <script src="/static/js/charts.js"></script>
+    <script src="/static/js/scrobbles-analysis.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.26.0/plotly.min.js"></script>
     <style>
         * {
